tests-compare/__tests__/__snapshots__/babel-repo-parser-typescript.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`files 1`] = `
Array [
  "babel/packages/babel-parser/test/fixtures/typescript/class/async-optional-method/input.js",
  "babel/packages/babel-parser/test/fixtures/typescript/class/optional-async-error/input.js",
  "babel/packages/babel-parser/test/fixtures/typescript/expect-plugin/export-interface/input.js",
  "babel/packages/babel-parser/test/fixtures/typescript/expect-plugin/export-type/input.js",
  "babel/packages/babel-parser/test/fixtures/typescript/expect-plugin/export-type-named/input.js",
  "babel/packages/babel-parser/test/fixtures/typescript/scope/module-declaration-var/input.js",
  "babel/packages/babel-parser/test/fixtures/typescript/scope/module-declaration-var-2/input.js",
]
`;

exports[`tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/typescript/class/optional-async-error/input.js
Options: {"parser":"typescript"} 1`] = `
Object {
  "error": [SyntaxError: ';' expected. (3:12)
  1 | class B { }
  2 | class A extends B {
> 3 |     async? method(val: string): Promise<void>;
    |            ^
  4 | }],
  "input": "class B { }
class A extends B {
    async? method(val: string): Promise<void>;
}",
  "options": Object {
    "parser": "typescript",
  },
}
`;
